[package]
name = "bird-pudding"
version = "0.1.0"
edition = "2024"
authors = ["Jeremy", "Ethan"]
description = "Bevy Game Jam 2025"

[dependencies]
bevy = { version = "0.16", features = ["dynamic_linking"] }
bevy_ecs_tiled = "0.7"
bevy_ecs_tilemap = "0.16"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
