[package]
name = "bird-pudding"
version = "0.1.0"
edition = "2024"
authors = ["Jeremy", "Ethan"]
description = "Bevy Game Jam 2025"

[dependencies]
bevy = { version = "0.16", features = ["file_watcher", "dynamic_linking"] }
bevy_ecs_tiled = { version = "0.7", features = ["avian", "avian_debug"] }
bevy_ecs_tilemap = "0.16"
avian2d = { version = "0.3", features = ["diagnostic_ui"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
